# fiborobotlab2_Clone

./: README.md
src/dynamixel_sdk_examples/src/: read_write_node.cpp
src/fiborobotlab2/: CMakeLists.txt  package.xml
src/fiborobotlab2/bash/: imu_setup.sh  send2board.sh  setup_cv_bridge.sh  setup_key.sh
src/fiborobotlab2/config/: camera_config.json
src/fiborobotlab2/launch/: run.launch.py
src/fiborobotlab2/msg/: BBox.msg  Rstate.msg
src/fiborobotlab2/scripts/: Detection_Node.py  Detection_NodeV2.py  Detection_NodeV3 (copy).py  Detection_NodeV3.py  Follow_ball.py  Getup_node.py  Goalkeeper.py  Goalkeeper2.py  Kick.py  PID_Node (copy).py  PID_Node.py  PID_Node3.py  PID_node2.py  State_Controll.py  camera.py  confirmed_node.py  detection_node.py  imu_pub.py  localization_initial.py  prepare_kick.py
src/fiborobotlab2/scripts/test/: Client_position.py  Dynamixel_test.py  pose_cam_aruco.py
